<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="@string/com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dir1"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/dir2"
        android:textSize="16dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/dir3"
        android:textSize="16dp"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/dir4"
        android:textSize="16dp"
        android:layout_marginTop="160dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/dir5"
        android:textSize="16dp"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/dir6"
        android:textSize="16dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/dir7"
        android:textSize="16dp"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="18dp"
        android:text="@string/map"
        android:gravity="center"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:onClick="mapa"
        android:background="#58954c"
        android:src="@drawable/mapa"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:layout_width="500dp"
        android:layout_height="100dp" />

</RelativeLayout>