<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginRight="18dp"
    android:layout_marginLeft="18dp"
    android:layout_marginTop="18dp"
    android:layout_marginEnd="18dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/nombre"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:hint="Nombre"
        android:gravity="center"
        android:background="@drawable/edittextstyle"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <EditText
        android:id="@+id/apellido"
        android:textColor="#000"
        android:layout_marginTop="80dp"
        android:hint="Apellido"
        android:gravity="center"
        android:background="@drawable/edittextstyle"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <EditText
        android:id="@+id/correo"
        android:textColor="#000"
        android:layout_marginTop="150dp"
        android:hint="Correo"
        android:gravity="center"
        android:background="@drawable/edittextstyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/butonns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:buttonTint="@color/selector"
        android:layout_marginTop="210dp"
        android:text="@string/borton1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/button1" />
    <RadioButton
        android:buttonTint="@color/selector"
        android:layout_marginTop="210dp"
        android:text="@string/borton2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/radioButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button2"/>
    </RadioGroup>
    <Button
        android:onClick="correo"
        android:textColor="#fff"
        android:background="#ff158611"
        android:text="Enviar"
        android:layout_marginTop="270dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="60dp" />
    <TextView
        android:textColor="#000"
        android:textSize="18dp"
        android:gravity="center"
        android:text="@string/correo"
        android:layout_marginTop="350dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>